// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The ColumnList component should render in a non-scrolling container 1`] = `
<div
  class="columnListToolbarContainer"
>
  <div
    style="margin-left:0"
  >
    <div
      class="toolbar"
    >
      <div
        class="item primary"
      >
        <span
          aria-label="fa-plus"
          class="fa fa-plus"
        />
      </div>
      <div
        class="item primary"
      >
        <span
          aria-label="fa-search"
          class="fa fa-search"
        />
      </div>
      <div
        class="item primary"
      >
        <span
          aria-label="fa-gear"
          class="fa fa-gear"
        />
      </div>
    </div>
  </div>
  <div
    class="columnListContainer firstVisibleColumnActive lastVisibleColumnActive"
  >
    <div
      class="columnList"
    >
      <div
        class="column"
      >
        <div
          class="item"
        >
          <span
            class="buttons"
          >
            <span
              aria-label="fa-heart"
              class="button fa fa-heart clickable"
              role="button"
              tabindex="0"
            />
            <span
              aria-label="fa-pencil"
              class="button fa fa-pencil clickable"
              role="button"
              tabindex="0"
            />
          </span>
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
        <div
          class="item"
        >
          <span
            class="buttons"
          >
            <span
              aria-label="fa-heart"
              class="button fa fa-heart clickable"
              role="button"
              tabindex="0"
            />
            <span
              aria-label="fa-pencil"
              class="button fa fa-pencil clickable"
              role="button"
              tabindex="0"
            />
          </span>
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
          <span
            aria-label="su-arrow-right"
            class="children su-arrow-right"
          />
        </div>
        <div
          class="item"
        >
          <span
            class="buttons"
          >
            <span
              aria-label="fa-heart"
              class="button fa fa-heart clickable"
              role="button"
              tabindex="0"
            />
            <span
              aria-label="fa-pencil"
              class="button fa fa-pencil clickable"
              role="button"
              tabindex="0"
            />
          </span>
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="column"
      >
        <div
          class="item"
        >
          <span
            class="buttons"
          >
            <span
              aria-label="fa-heart"
              class="button fa fa-heart clickable"
              role="button"
              tabindex="0"
            />
            <span
              aria-label="fa-pencil"
              class="button fa fa-pencil clickable"
              role="button"
              tabindex="0"
            />
          </span>
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
        <div
          class="item"
        >
          <span
            class="buttons"
          >
            <span
              aria-label="fa-heart"
              class="button fa fa-heart clickable"
              role="button"
              tabindex="0"
            />
            <span
              aria-label="fa-pencil"
              class="button fa fa-pencil clickable"
              role="button"
              tabindex="0"
            />
          </span>
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
          <span
            aria-label="su-arrow-right"
            class="children su-arrow-right"
          />
        </div>
      </div>
      <div
        class="column"
      >
        <div
          class="item"
        >
          <span
            class="buttons"
          >
            <span
              aria-label="fa-heart"
              class="button fa fa-heart clickable"
              role="button"
              tabindex="0"
            />
            <span
              aria-label="fa-pencil"
              class="button fa fa-pencil clickable"
              role="button"
              tabindex="0"
            />
          </span>
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
        <div
          class="item"
        >
          <span
            class="buttons"
          >
            <span
              aria-label="fa-heart"
              class="button fa fa-heart clickable"
              role="button"
              tabindex="0"
            />
            <span
              aria-label="fa-pencil"
              class="button fa fa-pencil clickable"
              role="button"
              tabindex="0"
            />
          </span>
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="column loading"
      >
        <div
          class="spinner"
          style="width:40px;height:40px"
        >
          <div
            class="doubleBounce1"
          />
          <div
            class="doubleBounce2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The ColumnList component should render in a scrolling container 1`] = `
<div
  class="columnListToolbarContainer"
>
  <div
    style="margin-left: -22px;"
  >
    <div
      class="toolbar"
    >
      <div
        class="item primary"
      >
        <span
          aria-label="fa-plus"
          class="fa fa-plus"
        />
      </div>
    </div>
  </div>
  <div
    class="columnListContainer firstVisibleColumnActive"
  >
    <div
      class="columnList"
    >
      <div
        class="column scrolling"
      >
        <div
          class="item"
        >
          <span
            class="buttons"
          />
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
        <div
          class="item"
        >
          <span
            class="buttons"
          />
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
          <span
            aria-label="su-arrow-right"
            class="children su-arrow-right"
          />
        </div>
        <div
          class="item"
        >
          <span
            class="buttons"
          />
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="column scrolling"
      >
        <div
          class="item"
        >
          <span
            class="buttons"
          />
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
        <div
          class="item"
        >
          <span
            class="buttons"
          />
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
          <span
            aria-label="su-arrow-right"
            class="children su-arrow-right"
          />
        </div>
      </div>
      <div
        class="column scrolling"
      >
        <div
          class="item"
        >
          <span
            class="buttons"
          />
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
        <div
          class="item"
        >
          <span
            class="buttons"
          />
          <span
            class="text"
          >
            <div
              aria-label="Item 1"
              class="croppedText"
              title="Item 1"
            >
              <div
                aria-hidden="true"
                class="front"
              >
                Ite
              </div>
              <div
                aria-hidden="true"
                class="back"
              >
                <span>
                  m 1
                </span>
              </div>
              <div
                class="whole"
              >
                Item 1
              </div>
            </div>
          </span>
        </div>
      </div>
      <div
        class="column loading scrolling"
      >
        <div
          class="spinner"
          style="width: 40px; height: 40px;"
        >
          <div
            class="doubleBounce1"
          />
          <div
            class="doubleBounce2"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
